unpackaged/main/default/objects/Case/fields/AccountOwner__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner__c</fullName>
    <label>Account owner</label>
    <type>Email</type>
</CustomField>