unpackaged/main/default/objects/Case/fields/Case_Report_Time_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Report_Time_Date__c</fullName>
    <description>The time/date when the case was reported to SITU</description>
    <label>Case Report Time/Date</label>
    <type>DateTime</type>
</CustomField>