unpackaged/main/default/objects/Case/fields/Date_of_Last_Comment__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Last_Comment__c</fullName>
    <label>Date of Last Comment</label>
    <type>DateTime</type>
</CustomField>