unpackaged/main/default/objects/Case/fields/Enquiries_and_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_and_Bookings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Enquiries and Bookings</label>
    <referenceTo>Enquiries_and_Bookings__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>