unpackaged/main/default/objects/Case/fields/Logged_in_User_Lookup_del__c.field-meta.xml
<CustomField>
    <fullName>Logged_in_User_Lookup_del__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Logged in User</label>
    <referenceTo>SITU_Users__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases_del</relationshipName>
    <type>Lookup</type>
</CustomField>