unpackaged/main/default/objects/Case/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Partner Account Cases</relationshipLabel>
    <relationshipName>Partner_Account_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>