unpackaged/main/default/objects/Case/fields/Supplier_Buildings__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Buildings__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Buildings</label>
    <referenceTo>Supplier_Buildings__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>