unpackaged/main/default/objects/Case/fields/Team_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Team_Vertical__c</fullName>
    <label>Team (Vertical)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Channel</valueSetName>
    </valueSet>
</CustomField>