unpackaged/main/default/objects/Case/fields/When_Was_The_Case_Reported__c.field-meta.xml
<CustomField>
    <fullName>When_Was_The_Case_Reported__c</fullName>
    <description>This field is auto populated when Case Reported Date Time field is updated by a flow. The reason for this automation is to make sure users don&#39;t update the field when creating the case but instead update it once the case was created.</description>
    <label>When Was The Case Reported</label>
    <type>DateTime</type>
</CustomField>