unpackaged/main/default/objects/Case/validationRules/Status_Not_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Status_Not_Blank</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISNEW(),
    ISBLANK(TEXT(Status))
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You need to mark status as New</errorMessage>
</ValidationRule>