unpackaged/main/default/objects/Case/validationRules/StatusNotResoleved.validationRule-meta.xml
<ValidationRule>
    <fullName>StatusNotResoleved</fullName>
    <active>true</active>
    <description>Checks if status is closed on creation</description>
    <errorConditionFormula>AND(
    ISNEW(),
     ISPICKVAL(Status, &quot;Resolved&quot;) 
)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>You need to mark the status as New or In Progress</errorMessage>
</ValidationRule>